# vidfetch_bot

./: .gitignore  Containerfile  Dockerfile  README.md  main.dart  main.py  pubspec.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  vidfetch-bot.container  vidfetch-bot.sublime-project  vidfetch-bot.sublime-workspace
.github/workflows/: build-test.yaml  docker-image.yml  workflow.yaml
charts/vidfetch-bot/: Chart.yaml  values.yaml
charts/vidfetch-bot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml
src/vidfetch_bot/: __main__.py  bot.py  filters.py  handlers.py  utils.py  video.py
tests/: test_big_video.py  test_filters.py  test_handlers.py  test_long_video.py  test_utils.py  test_valid_video.py  test_video.py
vidfetch_bot/: bot.py  filters.py  handlers.py  utils.py  video.py
